--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^4.0.0-beta",
     "chart.js": "^2.9.3",
     "jquery": "^3.4.1",
+    "popper.js": "^1.11.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
