--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ng2-charts": "^2.3.0",
     "popper.js": "^1.11.0",
     "rxjs": "~6.4.0",
+    "rxjs-compat": "^6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
